--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,7 @@ main::before{
 	background-position: center;
 	position:absolute;
 	background-image:url('../image/flower3-cut.png');
-	background-size:86% 80vh;
+	background-size:cover;
 	background-repeat:no-repeat;
 	width:100%;
 	height:100%;
@@ -398,7 +398,7 @@ h2{
 	margin-right:-58%;
 	width:30%;
 	border-radius:4px;
-    box-shadow:0px 1px 1px 1px rgba(0,0,0,0.2);
+    box-shadow:0px 1px 1px 1px rgba(0,0,0,0.1);
    
 }
 
@@ -414,7 +414,7 @@ h2{
 	float:left;
 	margin-top: -3%;
 	border-radius:4px;
-    box-shadow:0px 1px 1px 1px rgba(0,0,0,0.2);
+    box-shadow:0px 1px 1px 1px rgba(0,0,0,0.1);
 
 }
 .txt{
@@ -1042,8 +1042,8 @@ color:#fff;
 
 .btn-a{
 	font-size:1.1rem;
-	padding:.4rem .6rem;
-	margin-right:-48%;
+	padding:.3rem .6rem;
+	margin-right:-44%;
 }
 
 .span-3{
@@ -1056,7 +1056,7 @@ color:#fff;
 
 .stars{
 font-size:.6rem;
-margin-right:26%;
+margin-right:27%;
 }
 
 .container6{
