--- a/css/Get more.css
+++ b/css/Get more.css
@@ -168,7 +168,14 @@ h5{
 	font-size:1.2rem;
 	padding:.5rem .6rem;
 	float:left;
+	font-family:airal;
+	border-radius:4px;
 }
+
+.span-3 i{
+   color:white;
+}
+
 .btn-a{
 	color:white;
 	text-decoration:none;
@@ -176,6 +183,8 @@ h5{
 	padding:.5rem .8rem;
 	font-size:1.3rem;
 	float:right;
+	font-family:arial;
+	border-radius:4px;
 }
 .btn-a:hover{
 	background-color:#993366;
@@ -625,7 +634,7 @@ font-size:.8rem;
 	font-size:.5rem;
 }
 .span-3{
-	font-size:.9rem;
+	font-size:.8rem;
 	float:left;
 	padding:.2rem .4rem;
 }
@@ -633,7 +642,7 @@ font-size:.8rem;
 	float:right;
 
 	padding:.2rem .5rem;
-	font-size:1rem;
+	font-size:.8rem;
 }
 
 .span-3,.btn-a{
