--- a/css/Get more.css
+++ b/css/Get more.css
@@ -35,6 +35,7 @@ i{
 }
 
 .logo{
+	font-weight:bolder;
 	font-size:2rem;
 font-family: 'Broadway', sans-serif;		
   flex-basis:200px;
@@ -101,6 +102,7 @@ position:absolute;
 
 }
 .login-a{
+	font-weight:bolder;
 	font-size:1.4rem;
 	text-decoration:none;
 	color:#ff6666;
