--- a/css/cart.css
+++ b/css/cart.css
@@ -38,6 +38,7 @@ i{
 }
 
 .logo{
+	font-weight:bolder;
   font-size:2rem;
  font-family: 'Broadway', sans-serif;	
   flex-basis:200px;
@@ -104,6 +105,7 @@ position:absolute;
 
 }
 .login-a{
+	font-weight:bolder;
 	font-size:1.4rem;
 	text-decoration:none;
 	color:#ff6666;
