--- a/css/get more2.css
+++ b/css/get more2.css
@@ -32,6 +32,7 @@ i{
 }
 
 .logo{
+	font-weight:bolder;
 	font-size:2rem;
  font-family: 'Broadway', sans-serif;
   flex-basis:200px;
@@ -98,6 +99,7 @@ position:absolute;
 
 }
 .login-a{
+	font-weight:bolder;
 	font-size:1.4rem;
 	text-decoration:none;
 	color:#ff6666;
