--- a/css/login.css
+++ b/css/login.css
@@ -39,6 +39,7 @@ i{
 }
 
 .logo{
+	font-weight:bolder;
 	font-size:2rem;
   font-family: 'Broadway', sans-serif;
   flex-basis:200px;
@@ -110,6 +111,7 @@ position:absolute;
 	font-size:1.4rem;
 	text-decoration:none;
 	color:#ff6666;
+	font-weight:bolder;
 }
 .login{
 	float:right;
