--- a/css/style.css
+++ b/css/style.css
@@ -508,7 +508,7 @@ box-shadow:2px 2px 2px 1px rgba(0,0,0,0.3);
 footer{
 	width:100%;
 	background-color:rgba(0,0,0,0.9);
-	min-height:50vh;
+	height:auto;
 	text-align:center;
 	align-items:center;
 }
@@ -516,9 +516,8 @@ footer{
 	display:grid;
 	grid-template-columns:repeat(auto-fit,minmax(200px,1fr));
 	/* grid-template-columns:repeat(5,1fr); */
-	grid-template-rows:repeat(1,1fr);
-	grid-row-gap: 1rem;
-	grid-column-gap:3rem;
+	grid-row-gap:1rem;
+	grid-column-gap:2rem;
 	width:90%;
 	place-items:center;
 	text-align:center;
@@ -528,7 +527,7 @@ footer{
 }
 
 .links{
-	line-height:33px;
+
 }
 h6{
 	font-size:1.1rem;
@@ -578,6 +577,8 @@ h4{
 	text-decoration: none;
 }
 .span-8{
+	/*padding:0 0 .8rem 0;*/
+
 	color:#993366;
 	border-bottom:2px solid #993366;
 }
@@ -603,20 +604,20 @@ footer i{
 
 .facility{
 	padding:0 0 .8rem 0;
-	line-height:22px;
+	/*line-height:22px;*/
 }
-.links{
-	padding:0 0 2rem 0;
+h6{
+	margin-bottom:.3rem;
 }
 .contact{
-	padding:0 0 8rem 0;
+	padding:0 0 2rem 0;
 }
 .social{
-	padding:0 0 10rem 0;
+	padding:0 0 6rem 0;
 }
-.location{
+/*.location{
     padding:0 0 8rem 0;
-}
+}*/
 
 .twi-ter i{
 	position:relative;
@@ -627,8 +628,9 @@ footer i{
 	left: -6%;
 }
 
-
-
+.all-li{
+margin-bottom: .6rem;
+}
 
 /* ****************************************** */
 
@@ -1063,8 +1065,7 @@ top:.7rem;
 
 .span-3{
 	width:37%;
-	margin-top: -3%;
-	margin-top: -2%;
+	margin-top: -1%;
 	padding:.3rem .3rem;
 	font-size:.8rem;
 }
@@ -1087,6 +1088,19 @@ margin-right:28%;
 .txt{
 	top:1.3rem;
 }
+
+
+.footer-txt{
+	padding:3rem 0 0 0;
+	grid-row-gap:2rem;
+}
+
+.fas-con{
+	position:relative;
+	top:-6rem;
+
+}
+
 
 
 }
