--- a/css/cart.css
+++ b/css/cart.css
@@ -355,7 +355,7 @@ top:1rem;
 footer{
 	width:100%;
 	background-color:rgba(0,0,0,0.9);
-	min-height:50vh;
+	height:auto;
 	text-align:center;
 	align-items:center;
 }
@@ -363,9 +363,8 @@ footer{
 	display:grid;
 	grid-template-columns:repeat(auto-fit,minmax(200px,1fr));
 	/* grid-template-columns:repeat(5,1fr); */
-	grid-template-rows:repeat(1,1fr);
-	grid-row-gap: 1rem;
-	grid-column-gap:3rem;
+	grid-row-gap:1rem;
+	grid-column-gap:2rem;
 	width:90%;
 	place-items:center;
 	text-align:center;
@@ -375,7 +374,7 @@ footer{
 }
 
 .links{
-	line-height:33px;
+
 }
 h6{
 	font-size:1.1rem;
@@ -414,7 +413,6 @@ h4{
 	font-size:2rem;
 }
 #footer-a{
-	font-family:Geometr415 Blk BT;
 	color:lightgray;
 	text-decoration: none;
 }
@@ -426,6 +424,8 @@ h4{
 	text-decoration: none;
 }
 .span-8{
+	/*padding:0 0 .8rem 0;*/
+
 	color:#993366;
 	border-bottom:2px solid #993366;
 }
@@ -446,24 +446,26 @@ h4{
 	right:4.8rem;
 	top:1rem;
 }
+footer i{
+	color:#ff6666;
+}
 
 .facility{
 	padding:0 0 .8rem 0;
-	line-height:22px;
+	/*line-height:22px;*/
 }
-.links{
-	padding:0 0 2rem 0;
+h6{
+	margin-bottom:.3rem;
 }
 .contact{
-	padding:0 0 8rem 0;
+	padding:0 0 2rem 0;
 }
 .social{
-	padding:0 0 10rem 0;
+	padding:0 0 6rem 0;
 }
-.location{
+/*.location{
     padding:0 0 8rem 0;
-}
-
+}*/
 
 .twi-ter i{
 	position:relative;
@@ -474,10 +476,10 @@ h4{
 	left: -6%;
 }
 
-
-
-
-
+.all-li{
+font-family:Geometr415 Blk BT;
+margin-bottom: .6rem;
+}
 
 
 
@@ -1158,6 +1160,21 @@ font-size:.6rem;
 margin-right:28%;
 }
 
+.txt{
+	top:1.3rem;
+}
+
+
+.footer-txt{
+	padding:3rem 0 0 0;
+	grid-row-gap:2rem;
+}
+
+.fas-con{
+	position:relative;
+	top:-6rem;
+
+}
 
 }
 
