--- a/css/cart.css
+++ b/css/cart.css
@@ -7,20 +7,37 @@
 	box-sizing:border-box;
 }
 
-.burger{
-	display:none;
-}
-.span-9{
-	background-color:#ff6666;
-	border-radius:50%;
-	color:#993366;
-	padding:.2rem .4rem;
-	font-size: .9rem;
+
+:root{
+	--mainbg-color:#ff6666;
+	--i-color:#ff6666;
+	--btn2-color:#ff6666;
+	--btn1-color:#993366;
+	--purple:#993366;
+	--ulfont:'Montserrat', sans-serif;
+	--logofont:'Broadway', sans-serif;
+	--btnfont:arial;
 }
 
 
 i{
-	color: #ff6666;
+	color:var(--i-color);
+}
+
+
+/* ************ header start  ************** */
+
+
+
+.burger{
+	display:none;
+}
+.span-9{
+	background-color:var(--mainbg-color);
+	border-radius:50%;
+	color:var(--purple);
+	padding:.2rem .4rem;
+	font-size: .9rem;
 }
 
 .header{
@@ -40,10 +57,9 @@ i{
 .logo{
 	font-weight:bolder;
   font-size:2rem;
- font-family: 'Broadway', sans-serif;	
+ font-family:var(--logofont);	
   flex-basis:200px;
 }
-
 
 .ul1,.login{
 	display:flex;
@@ -69,7 +85,7 @@ position:absolute;
 }
 
 .ul2 li a:hover{
-	color: #993366;
+	color:var(--purple);
 }
 .ul2 li{
 	padding:.1rem 0 .3rem 0;
@@ -83,12 +99,12 @@ position:absolute;
 
 .ul1>li:hover{
 	border-radius:3px;
-  outline:2px solid  #993366;
+  outline:2px solid var(--purple);
 }
 
 .active-li{
 	border-radius:3px;
-	outline:2px solid #993366; 
+	outline:2px solid var(--purple); 
 }
 .ul1>li{
 	transition:0.1s;
@@ -98,7 +114,7 @@ position:absolute;
 	padding:.1rem 0 .1rem 0;
 }
 .ul1 li a{
-	 font-family:'Montserrat', sans-serif; 
+	 font-family:var(--ulfont); 
 	font-size:1.2rem;
 	text-decoration:none;
 	color:black;
@@ -108,14 +124,14 @@ position:absolute;
 	font-weight:bolder;
 	font-size:1.4rem;
 	text-decoration:none;
-	color:#ff6666;
+	color:var(--mainbg-color);
 	font-family:Geometr415 Blk BT;
 }
 .login{
 	float:right;
 }
 .login a:hover{
- color:#993366;
+ color:var(--purple);
 }
 
 .cart{
@@ -123,10 +139,16 @@ position:absolute;
 	float:right;
 }
 .cart-logo{
-	color:#993366;
+	color:var(--purple);
 }
 
 
+
+/* ************ header end ************** */
+
+
+
+/* ************ cart start  ************** */
 
 
 .cart-page{
@@ -138,15 +160,12 @@ position:absolute;
 	align-content:center;
 	justify-content:space-between;
 	padding:.8rem 0 0 0;
- /*   box-shadow:2px 2px 4px 2px rgba(0,0,0,0.3); */
-  /* background-color:lightgray; */
 }
 
 .big-img img{
 	 border-radius:5px;
 	box-shadow:2px 2px 1px 1px rgba(0,0,0,0.1);
 	width:270px;
-	/* background-color:yellow; */
 	height:270px;
 }
 
@@ -202,7 +221,7 @@ padding:0 0 .5rem 0;
 
 }
 .span-1{
-	background-color:#ff6666;
+	background-color:var(--btn1-color);
 	font-size:1.5rem;
 	padding:.3rem .5rem;
 	position:relative;
@@ -216,9 +235,14 @@ font-weight:bolder;
 text-decoration: none;
 color:white;
 padding:.7rem .5rem;
-background-color:#993366;
+background-color:var(--btn2-color);
 font-size:.8rem;
 }
+
+/* ************ cart end  ************** */
+
+
+/* ************ product start  ************** */
 
 
 .container5{
@@ -257,7 +281,7 @@ font-size:.8rem;
 
 .btn-a{
 	text-decoration: none;
-	background-color:#ff6666;
+	background-color:var(--btn2-color);
 	color:white;
 	font-size:1.3rem;
 	padding:.6rem .8rem;
@@ -268,11 +292,11 @@ font-size:.8rem;
 }
 
 .btn-a:hover{
-    background-color:#993366;
+    background-color:var(--purple);
 }
 .span-3{
 	padding:.6rem .8rem;
-	background-color:#993366;
+	background-color:var(--btn1-color);
 	color:white;
 	font-size:1.1rem;
 	width:30%;
@@ -297,9 +321,6 @@ font-size:.8rem;
 .stars{
 	margin-right:20%;
 	margin-top: -8%;
-}
-.stars i{
-	color:#ff6666;
 }
 
 
@@ -327,6 +348,14 @@ top:1rem;
 }
 
 
+/* ************ product end  ************** */
+
+
+
+/* ************ footer start  ************** */
+
+
+
 .numbers{
 	display:flex;
 	align-items:center;
@@ -338,18 +367,17 @@ top:1rem;
 }
 .circle{
 	padding:.3rem .7rem;
-	border: 2px solid #ff6666;
+	border: 2px solid var(--mainbg-color);
 	border-radius:50%;
 }
 
 .circle:hover{
-	background-color:#993366;
+	background-color:var(--purple);
 }
 
 .positive,.negetive{
 	border-color:rgba(0,0,0,0.7);
 }
-
 
 
 footer{
@@ -383,8 +411,8 @@ h6{
 .span-7{
 	background-color:white;
 	padding:.3rem .3rem;
-	font-family: 'Broadway', sans-serif;
-	color:#993366;
+	font-family:var(--logofont);
+	color:var(--purple);
 	animation: color .7s linear infinite;
 }
 
@@ -395,11 +423,11 @@ h6{
  }
 
  50%{
- 	color:#993366;
+ 	color:var(--purple);
  }
 
  100%{
- 	color:#ff6666;
+ 	color:var(--mainbg-color);
  }
 
 }
@@ -424,10 +452,8 @@ h4{
 	text-decoration: none;
 }
 .span-8{
-	/*padding:0 0 .8rem 0;*/
-
-	color:#993366;
-	border-bottom:2px solid #993366;
+	color:var(--purple);
+	border-bottom:2px solid var(--purple);
 }
 .color-txt{
 	font-family:Geometr415 Blk BT;
@@ -439,20 +465,17 @@ h4{
 }
 
 #footer-a:hover,.color-txt:hover{
-	color:#ff6666;
+	color:var(--mainbg-color);
 }
 .i-cc{
 	position:relative;
 	right:4.8rem;
 	top:1rem;
 }
-footer i{
-	color:#ff6666;
-}
+
 
 .facility{
 	padding:0 0 .8rem 0;
-	/*line-height:22px;*/
 }
 h6{
 	margin-bottom:.3rem;
@@ -463,9 +486,6 @@ h6{
 .social{
 	padding:0 0 6rem 0;
 }
-/*.location{
-    padding:0 0 8rem 0;
-}*/
 
 .twi-ter i{
 	position:relative;
@@ -481,7 +501,12 @@ font-family:Geometr415 Blk BT;
 margin-bottom: .6rem;
 }
 
+/* ************ footer end ************ */
 
+
+
+
+/* ************ meadia query ************ */
 
 
 
@@ -574,7 +599,7 @@ margin-bottom: .6rem;
 nav{
 	left:-2%;
 	position:absolute;
-	background-color:#993366;
+	background-color:var(--purple);
 	top:5rem;
 }
 .active-li{
@@ -708,7 +733,7 @@ color:#fff;
 nav{
 	left:-2%;
 	position:absolute;
-	background-color:#993366;
+	background-color:var(--purple);
 	top:5rem;
 }
 .active-li{
@@ -864,7 +889,7 @@ color:#fff;
 nav{
 	left:-2%;
 	position:absolute;
-	background-color:#993366;
+	background-color:var(--purple);
 	top:5rem;
 }
 .active-li{
@@ -1029,7 +1054,7 @@ top:-.4rem;
 nav{
 	left:-2%;
 	position:absolute;
-	background-color:#993366;
+	background-color:var(--purple);
 	top:5rem;
 }
 .active-li{
