--- a/css/Product.css
+++ b/css/Product.css
@@ -7,20 +7,36 @@
 	box-sizing:border-box;
 }
 
+
+:root{
+	--mainbg-color:#ff6666;
+	--i-color:#ff6666;
+	--btn2-color:#ff6666;
+	--btn1-color:#993366;
+	--lightblue: lightblue;
+	--purple:#993366;
+	--ulfont:'Montserrat', sans-serif;
+	--logofont:'Broadway', sans-serif;
+	--btnfont:arial;
+}
+
+
+/* header start */
+
 .burger{
 	display:none;
 }
 
 .span-9{
-	background-color:#ff6666;
+	background-color:var(--mainbg-color);
 	border-radius:50%;
-	color:#993366;
+	color:var(--purple);
 	padding:.2rem .4rem;
 	font-size: .9rem;
 }
 
 i{
-	color:#ff6666; 
+	color:var(--i-color); 
 }
 
 .header{
@@ -37,7 +53,7 @@ i{
 
 .logo{
 	font-size:2rem;
-  font-family: 'Broadway', sans-serif;
+  font-family:var(--logofont);
   flex-basis:200px;
 	font-weight:bolder;
 
@@ -68,7 +84,7 @@ position:absolute;
 }
 
 .ul2 li a:hover{
-	color: #993366;
+	color:var(--purple);
 }
 .ul2 li{
 	padding:.1rem 0 .3rem 0;
@@ -83,12 +99,12 @@ position:absolute;
 
 .ul1>li:hover{
 	border-radius:3px;
-  outline:2px solid  #993366;
+  outline:2px solid var(--purple);
 }
 
 .active-li{
 	border-radius:3px;
-	outline:2px solid #993366; 
+	outline:2px solid var(--purple); 
 }
 .ul1>li{
 	transition:0.1s;
@@ -101,21 +117,21 @@ position:absolute;
 	font-size:1.2rem;
 	text-decoration:none;
 	color:black;
-    font-family:'Montserrat', sans-serif; 
+    font-family:var(--ulfont); 
 }
 .login-a{
 	font-size:1.4rem;
 	text-decoration:none;
-	color:#ff6666;
-	font-family:Geometr415 Blk BT;
+	color:var(--mainbg-color);
 	font-weight:bolder;
-
+	font-family:Geometr415 Blk BT;
+  
 }
 .login{
 	float:right;
 }
 .login a:hover{
- color:#993366;
+ color:var(--purple);
 }
 
 .cart{
@@ -123,8 +139,16 @@ position:absolute;
 	float:right;
 }
 .cart-logo{
-	color:#993366;
+	color:var(--purple);
 }
+
+
+
+/* header end */
+
+
+
+/* Product start*/
 
 
 .comman{
@@ -164,13 +188,12 @@ h5{
 	top:2rem;
 }
 .span-3{
-	background-color:#993366;
+	background-color:var(--btn1-color);
 	color:white;
 	font-size:1.2rem;
 	padding:.5rem .6rem;
 	float:left;
-	font-family:arial;
-	
+	font-family:var(--btnfont);
 	border-radius:4px;
 }
 
@@ -181,31 +204,41 @@ h5{
 .btn-a{
 	color:white;
 	text-decoration:none;
-	background-color:#ff6666;
+	background-color:var(--btn2-color);
+	background-color:;
 	padding:.5rem .8rem;
 	font-size:1.3rem;
 	float:right;
-	font-family:arial;
+	font-family:var(--btnfont);
 	
 	border-radius:4px;
 }
 .btn-a:hover{
-	background-color:#993366;
+	background-color:var(--purple);
 }
 
 .name{
+	font-family:normal;
 	text-align:center;
 	font-size:1.5rem;
 }
 .span-1{
-	color: #993366;
-	border-bottom:2px solid #993366;
+	font-family:normal;
+	color:var(--purple);
+	border-bottom:2px solid var(--mainbg-color);
 }
 
 .stars{
-	font-size:1.2rem;
+	font-size:.9rem;
 }
 
+
+/************Product end****************/
+
+
+
+
+/************footer start****************/
 
 
 .numbers{
@@ -216,15 +249,17 @@ h5{
 	place-items: center;
 	flex-wrap:wrap;
 	justify-content:center;
+	font-family:none;
+
 }
 .circle{
 	padding:.3rem .7rem;
-	border: 2px solid #ff6666;
+	border: 2px solid var(--mainbg-color);
 	border-radius:50%;
 }
 
 .circle:hover{
-	background-color:#993366;
+	background-color:var(--purple);
 }
 
 .positive,.negetive{
@@ -264,7 +299,7 @@ h6{
 .span-7{
 	background-color:white;
 	padding:.3rem .3rem;
-	font-family: 'Broadway', sans-serif;
+	font-family:var(--logofont);
 	color:#993366;
 	animation: color .7s linear infinite;
 }
@@ -276,11 +311,11 @@ h6{
  }
 
  50%{
- 	color:#993366;
+ 	color:var(--purple);
  }
 
  100%{
- 	color:#ff6666;
+ 	color: var(--mainbg-color);
  }
 
 }
@@ -305,14 +340,13 @@ h4{
 	text-decoration: none;
 }
 .span-8{
-	/*padding:0 0 .8rem 0;*/
-
-	color:#993366;
-	border-bottom:2px solid #993366;
+	color:var(--purple);
+	border-bottom:2px solid var(--purple);
 }
 .color-txt{
-	font-family:Geometr415 Blk BT;
 	color:lightgray;
+	font-family:Geometr415 Blk BT;
+
 }
 .facility{
 	text-align:center;
@@ -320,21 +354,17 @@ h4{
 }
 
 #footer-a:hover,.color-txt:hover{
-	color:#ff6666;
+	color:var(--mainbg-color);
 }
 .i-cc{
 	position:relative;
 	right:4.8rem;
 	top:1rem;
 }
-footer i{
-	color:#ff6666;
-}
+
 
 .facility{
-	padding:0 0 .8rem 0;
-	/*line-height:22px;*/
-}
+	padding:0 0 .8rem 0;}
 h6{
 	margin-bottom:.3rem;
 }
@@ -344,9 +374,6 @@ h6{
 .social{
 	padding:0 0 6rem 0;
 }
-/*.location{
-    padding:0 0 8rem 0;
-}*/
 
 .twi-ter i{
 	position:relative;
@@ -361,6 +388,10 @@ h6{
 font-family:Geometr415 Blk BT;
 margin-bottom: .6rem;
 }
+
+
+
+/* footer end*/
 
 
 
@@ -424,7 +455,7 @@ margin-bottom: .6rem;
 nav{
 	left:-2%;
 	position:absolute;
-	background-color:#993366;
+	background-color:var(--purple);
 	top:5rem;
 }
 .active-li{
@@ -550,7 +581,7 @@ justify-content:space-around;
 nav{
 	left:-2%;
 	position:absolute;
-	background-color:#993366;
+	background-color:var(--purple);
 	top:5rem;
 }
 .active-li{
@@ -678,7 +709,7 @@ justify-content:space-around;
 nav{
 	left:-2%;
 	position:absolute;
-	background-color:#993366;
+	background-color:var(--purple);
 	top:5rem;
 }
 .active-li{
