--- a/css/style.css
+++ b/css/style.css
@@ -8,20 +8,32 @@
 	font-family:Geometr415 Blk BT;
 	box-sizing:border-box;
 }
+
+:root{
+	--mainbg-color:#ff6666;
+	--i-color:#ff6666;
+	--btn2-color:#ff6666;
+	--btn1-color:#993366;
+	--lightblue: lightblue;
+	--purple:#993366;
+	--ulfont:'Montserrat', sans-serif;
+	--logofont:'Broadway', sans-serif;
+	--btnfont:arial;
+}
 	
+/* ********* header start ********* */
+
+
 .span-9{
-	background-color:#ff6666;
+	background-color:var(--i-color);
 	border-radius:50%;
-	color:#993366;
+	color:var(--purple);
 	padding:.2rem .4rem;
 	font-size: .9rem;
 }
 
-
-
-
  .ul1 i{
-        color: #ff6666;
+        color:var(--i-color);
       }
 
 .header{
@@ -40,7 +52,7 @@
 
 .logo{
 	font-size:2rem;
- font-family: 'Broadway', sans-serif;	
+ font-family:var(--logofont);	
   flex-basis:200px;
 	font-weight:bolder;
 
@@ -77,7 +89,7 @@ position:absolute;
 }
 
 .ul2 li a:hover{
-	color: #993366;
+	color:var(--purple);
 }
 .ul2 li{
 	padding:.1rem 0 .3rem 0;
@@ -85,12 +97,12 @@ position:absolute;
 
 .ul1>li:hover{
 	border-radius:2px;
-  outline:2px solid  #993366;
+  outline:2px solid var(--purple);
 }
 
 .active-li{
 	border-radius:2px;
-	outline:2px solid #993366; 
+	outline:2px solid var(--purple) 
 }
 .ul1>li{
 	transition:0.1s;
@@ -106,15 +118,12 @@ position:absolute;
 	/*font-family: 'Lato', sans-serif;*/
 	/*font-family:bolder*/
 	/*font-family:Geometr415 Blk BT;*/
-	 font-family:'Montserrat', sans-serif; 
-
-
-
+	 font-family:var(--ulfont); 
 }
 .login-a{
 	font-size:1.4rem;
 	text-decoration:none;
-	color:#ff6666;
+	color:var(--mainbg-color);
 	font-weight:bolder;
 	
 }
@@ -122,7 +131,7 @@ position:absolute;
 	float:right;
 }
 .login a:hover{
- color:#993366;
+ color:var(--purple);
 }
 
 .cart{
@@ -130,14 +139,21 @@ position:absolute;
 	/*float:right;*/
 }
 .cart-logo{
-	color:#993366;
+	color:var(--purple);
 }
+
+
+/* ********* header end********* */
+
+
+/* ********* main start ********* */
+
 
 
 main{
 	z-index:1;
 	position:relative;
-	background-color:#ff6666;
+	background-color:var(--mainbg-color);
 }
 
 
@@ -179,12 +195,11 @@ main::before{
 }
 .span-1{
 	font-weight:bolder;
-	
-    font-family: 'Broadway', sans-serif;
+    font-family:var(--logofont);
 	background-color:white;
 	padding: 0 0 0 2px;
     font-size:4.9rem;
-    color:#993366;
+    color:var(--purple);
     animation: color .7s linear infinite;
 }
 .introduction{
@@ -215,11 +230,11 @@ main::before{
 .btn-a-1{
 	cursor:pointer;
 	padding:.6rem;
-	background-color:#993366;
+	background-color:var(--btn1-color);
 }
 
 .burger i{
-	color:#ff6666;
+	color:var(--i-color);
 }
 
 .burger{
@@ -249,6 +264,13 @@ main::before{
 	}
 }
 
+/* ********* main end ********* */
+
+
+
+/* ********* container1 start ********* */
+
+
 .container1{
 	display:grid;
 	grid-template-columns:repeat(auto-fit,minmax(180px,1fr));
@@ -263,13 +285,12 @@ main::before{
 
 .bg1{
 	padding:1.2rem;
-	/* background-color:#ff6666; */
 	box-shadow:2px 2px 1px 1px rgba(0,0,0,0.1); 
     transition:0.2s;
 }
 
 .icon{
-	color:#ff6666;
+	color:var(--i-color);
 	font-size:1.5rem;
 }
 p{
@@ -277,9 +298,16 @@ p{
 }
 
 .container1 :hover i{
-	color:#993366;
+	color:var(--purple);
 }
 
+
+
+/* ********* container1 end ********* */
+
+
+
+/* ********* container2 start ********* */
 
 
 .container2{
@@ -299,11 +327,7 @@ p{
 	height:270px;
 	border-radius:5px;
 }
-/* .bg2{
-	width: 310px;
-	height:325px;
-}
- */
+
 .bg2:hover{
 	box-shadow:0px 3px 3px 2px rgba(0,0,0,0.3);
 	transform:scale(0.8) rotate(-13deg);
@@ -313,11 +337,11 @@ p{
 	transition: 0.4s;
 	padding:.3rem 0 1rem 0;
 	box-shadow:0px 2px 2px 1px rgba(0,0,0,0.2);
-	background-color:lightblue;
+	background-color:var(--lightblue);
 }
 h1{
 	font-size:1rem;
-	border-bottom:2px solid #ff6666;
+	border-bottom:2px solid var(--mainbg-color);
 }
 
 h5{
@@ -333,8 +357,8 @@ top:.3rem;
 
 .span-1{
 	font-size:5rem;
-   color:#993366;
-   border-bottom:2px solid #ff6666;
+   color:var(--purple);
+   border-bottom:2px solid var(--mainbg-color);
 }
 
 .social-icon{
@@ -359,11 +383,11 @@ top:.3rem;
 }
 
 .icon- i{
-	color: #ff6666;
+	color:var(--i-color);
 }
 
 .icon- i:hover{
-	color: #993366;
+	color:var(--purple);
 }
 
 .icon-1{
@@ -379,73 +403,30 @@ top:.3rem;
 	bottom:.1rem;
 }
 
+/* ********** continer2 end ************ */
+
+
+
+/* ********** continer4 start ************ */
+
+
 .product{
   text-align:center;
   padding:.2rem 0;
 }
+
+
+.span-2{
+	color:var(--purple);
+    border-bottom:2px solid var(--mainbg-color);
+}
+
 h2{
 	font-size:2.3rem;
-	
-}
-.span-2{
-	color:#993366;
-    border-bottom:2px solid #ff6666;
+
 }
 
 
-.btn-a{
-	text-decoration: none;
-	background-color:#ff6666;
-	color:white;
-	font-size:1.3rem;
-	padding:.6rem .8rem;
-	margin-right:-58%;
-	width:30%;
-	border-radius:4px;
-    box-shadow:0px 1px 1px 1px rgba(0,0,0,0.1);
-	font-family:norml;
-	
-  
-}
-
-.btn-a:hover{
-    background-color:#993366;
-}
-.span-3{
-	font-family:arial;
-	padding:.6rem .8rem;
-	background-color:#993366;
-	color:white;
-	font-size:1.1rem;
-	width:30%;
-	float:left;
-	margin-top: -3%;
-	border-radius:4px;
-    box-shadow:0px 1px 1px 1px rgba(0,0,0,0.1);
-
-}
-.txt{
-	position:relative;
-	top:2.5rem;
-	padding:0 .3rem 0 0;
-}
-
-.bttn-a{
-	background-color:#993366;
-	padding:.6rem 1.1rem;
-	border-radius:50px;
-	text-align:center;
-	text-decoration:none;
-	color:#fff;
-}
-
-.stars{
-	margin-right:24%;
-	margin-top: -8%;
-}
-.stars i{
-	color:#ff6666;
-}
 
 .container4{
 	display:grid;
@@ -465,11 +446,6 @@ h2{
 	height:270px;
 }
 
-.txt4{
-	position:relative;
-	top:2.5rem;
-	padding:0 .3rem 0 0;
-}
 .bg4{
 	border-radius:5px;
 	padding:.5rem .5rem 2.9rem .5rem;
@@ -480,6 +456,67 @@ h2{
 	
 box-shadow:2px 2px 2px 1px rgba(0,0,0,0.3);
 }
+
+.btn-a{
+	text-decoration: none;
+	background-color:var(--btn2-color);
+	color:white;
+	font-size:1.3rem;
+	padding:.6rem .8rem;
+	margin-right:-58%;
+	width:30%;
+	border-radius:4px;
+    box-shadow:0px 1px 1px 1px rgba(0,0,0,0.1);
+	font-family:var(--btnfont);
+	
+  
+}
+
+.btn-a:hover{
+    background-color:var(--purple);
+}
+.span-3{
+	font-family:var(--btnfont);
+	padding:.6rem .8rem;
+	background-color:var(--btn1-color);
+	color:white;
+	font-size:1.1rem;
+	width:30%;
+	float:left;
+	margin-top: -3%;
+	border-radius:4px;
+    box-shadow:0px 1px 1px 1px rgba(0,0,0,0.1);
+
+}
+.txt{
+	position:relative;
+	top:2.5rem;
+	padding:0 .3rem 0 0;
+}
+
+.bttn-a{
+	background-color:var(--purple);
+	padding:.6rem 1.1rem;
+	border-radius:50px;
+	text-align:center;
+	text-decoration:none;
+	color:#fff;
+}
+
+.stars{
+	margin-right:18%;
+	margin-top: -8%;
+}
+.stars i{
+	color:var(--i-color);
+}
+
+/* ********** continer4 end ************ */
+
+
+
+/* ********** continer6 start ************ */
+
 
 .container6{
 	 display:grid;
@@ -504,6 +541,14 @@ box-shadow:2px 2px 2px 1px rgba(0,0,0,0.3);
 	width:200px;
 	height:50px;
 }
+
+
+/* ********** continer6 end ************ */
+
+
+/* ********** footer start ************ */
+
+
 
 footer{
 	width:100%;
@@ -536,8 +581,8 @@ h6{
 .span-7{
 	background-color:white;
 	padding:.3rem .3rem;
-	font-family: 'Broadway', sans-serif;
-	color:#993366;
+	font-family:var(--logofont);
+	color:var(--purple);
 	animation: color .7s linear infinite;
 }
 
@@ -548,11 +593,11 @@ h6{
  }
 
  50%{
- 	color:#993366;
+ 	color:var(--purple);
  }
 
  100%{
- 	color:#ff6666;
+ 	color:var(--mainbg-color);
  }
 
 }
@@ -577,10 +622,8 @@ h4{
 	text-decoration: none;
 }
 .span-8{
-	/*padding:0 0 .8rem 0;*/
-
-	color:#993366;
-	border-bottom:2px solid #993366;
+	color:var(--purple);
+	border-bottom:2px solid var(--purple);
 }
 .color-txt{
 	color:lightgray;
@@ -591,7 +634,7 @@ h4{
 }
 
 #footer-a:hover,.color-txt:hover{
-	color:#ff6666;
+	color:var(--mainbg-color);
 }
 .i-cc{
 	position:relative;
@@ -599,12 +642,11 @@ h4{
 	top:1rem;
 }
 footer i{
-	color:#ff6666;
+	color:var(--i-color);
 }
 
 .facility{
 	padding:0 0 .8rem 0;
-	/*line-height:22px;*/
 }
 h6{
 	margin-bottom:.3rem;
@@ -615,9 +657,6 @@ h6{
 .social{
 	padding:0 0 6rem 0;
 }
-/*.location{
-    padding:0 0 8rem 0;
-}*/
 
 .twi-ter i{
 	position:relative;
@@ -632,7 +671,13 @@ h6{
 margin-bottom: .6rem;
 }
 
-/* ****************************************** */
+
+/* ********** footer end ************ */
+
+
+
+
+/* ****************** media query ******************* */
 
 @media screen and (max-width:1215px) and (min-width:1161px){
 
@@ -835,7 +880,7 @@ position: relative;
 nav{ 
 	left: -9%;
 	position:absolute;
-	background-color:#993366;
+	background-color:var(--purple);
 	top:5rem;
 }
 .active-li{
@@ -940,7 +985,7 @@ font-size:1.6rem;
 
 nav{
 	position:absolute;
-	background-color:#993366;
+	background-color:var(--purple);
 	top:5rem;
 }
 .active-li{
